[package]
name = "supercluster-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbush = { git = "https://github.com/kylebarron/flatbush-rs", rev = "5e5cdbf3f5ed033fa9db4e7be4f78fa83945511c" }


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
