[package]
name = "supercluster-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
license = "MIT"
repository = "https://github.com/developmentseed/supercluster-rs"
categories = ["science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-index = "0.1.1"
thiserror = "1"


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
