[package]
name = "supercluster-python"
version = "0.1.0"
authors = ["Kyle Barron <kyle@developmentseed.org>"]
edition = "2021"
description = "Python bindings to a port of Supercluster in Rust."
readme = "README.md"
repository = "https://github.com/developmentseed/supercluster-rs"
license = "MIT"
keywords = ["python", "arrow", "geospatial"]
categories = ["science::geo"]
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["abi3-py38", "anyhow"] }
supercluster-rs = { path = "../" }
thiserror = "1"
