[build-system]
requires = ["maturin>=1.2.1,<2.0"]
build-backend = "maturin"

[project]
name = "supercluster-rs"
requires-python = ">=3.8"
dependencies = ["pyarrow>=14"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "supercluster_rs._rust"
python-source = "python"
